Update URLs for GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "https://7ed3-109-195-132-156.ngrok-free.app",
+	"url": "https://f112-109-195-132-156.ngrok-free.app",
 	"name": "Torch",
-	"iconUrl": "https://github.com/Yury08/torch-metadata.git/coin.png"
+	"iconUrl": "https://yury08.github.io/torch-metadata/coin.png"
 }
