--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "https://f112-109-195-132-156.ngrok-free.app",
+	"url": "https://07ea-109-195-132-156.ngrok-free.app",
 	"name": "Torch",
 	"iconUrl": "https://yury08.github.io/torch-metadata/coin.png"
 }
