--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "https://07ea-109-195-132-156.ngrok-free.app",
+	"url": "https://tg-kron.ru",
 	"name": "KRON",
 	"iconUrl": "https://yury08.github.io/kron-metadata/coin.png"
 }
