--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "https://tg-kron.ru",
-	"name": "KRON",
+	"url": "https://tandem-client-one.vercel.app",
+	"name": "Tandem",
 	"iconUrl": "https://yury08.github.io/kron-metadata/coin.png"
 }
