--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
 	"url": "https://tandem-client-one.vercel.app",
 	"name": "Tandem",
-	"iconUrl": "https://yury08.github.io/tandem-metadata/coin.png"
+	"iconUrl": "https://yury08.github.io/tandem-metadata/tandem_logo.png"
 }
